<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/icon_clover"
        app:srcCompat="@drawable/clover" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ganheinamega" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_banner" />

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_number"
            tools:text="Números sorteados" />

        <Button
            android:id="@+id/btn_generate"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:backgroundTint="@color/green"
            android:text="@string/number_generator"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:shadowColor="@color/green"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="2"
            android:text="@string/txt_footer"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_generate" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>